# - an entry should not explain why a change was made, but rather what the change was
#   (the explanation of why belongs in the source code itself)
#
# http://www.cybop.net
# - Cybernetics Oriented Programming -
#
# @version $RCSfile: ChangeLog,v $ $Revision: 1.147 $ $Date: 2009-10-06 21:25:26 $ $Author: christian $
# @author Christian Heller <christian.heller@tuxtax.de>
#

2011-01-20  Christian Heller  <christian.heller@tuxtax.de>
        * Complete prototype website for application "presence"
        * Add example application "http_communication"

2011-01-13  Christian Heller  <christian.heller@tuxtax.de>
        * Add prototype website for application "presence"

2011-01-12  Christian Heller  <christian.heller@tuxtax.de>
        * Make http communication work fully
        * Create new cybol example application "presence"

2011-01-11  Christian Heller  <christian.heller@tuxtax.de>
        * Make http response encoding work

2011-01-10  Christian Heller  <christian.heller@tuxtax.de>
        * Debug http response encoder (resulting character array is empty)

2011-01-09  Christian Heller  <christian.heller@tuxtax.de>
        * Continue http response encoder (header entries)

2011-01-08  Christian Heller  <christian.heller@tuxtax.de>
        * Continue http response encoder (general structure)

2011-01-07  Christian Heller  <christian.heller@tuxtax.de>
        * Prepare http response encoder

2011-01-05  Christian Heller  <christian.heller@tuxtax.de>
        * Factor out model diagram encoder functions to separate files in sub directory
        * Fix error that uri details were not displayed in model diagram (wrong constant count)
        * Make html encoder work again

2011-01-03  Christian Heller  <christian.heller@tuxtax.de>
        * Fix file "uri_decoder.c" and others, to make uri parsing work correctly

2011-01-02  Christian Heller  <christian.heller@tuxtax.de>